# DetectingNature

./: .gitignore  README.md  build.sh  detectingnature.gemspec  doxyfile  extconf.rb  settings-fast.json  settings.json  settings.xml
libs/gmm-fisher/: CMakeLists.txt  fisher.cxx
ruby/: apikeys.rb  classifier.rb  fetch_flickr.rb  fetch_panoramio.rb  fetch_panoramio_csv.rb  fetch_twitter.rb  fetch_twitterstream.rb  settings-ruby.json
src/: CMakeLists.txt  CacheHelper.cpp  CacheHelper.h  ClassificationFramework.cpp  ClassificationFramework.h  Classifier.cpp  Classifier.h  Codebook.cpp  Codebook.h  CodebookGenerator.cpp  CodebookGenerator.h  CodebookManager.cpp  CodebookManager.h  ConfusionMatrix.cpp  ConfusionMatrix.h  DatasetManager.cpp  DatasetManager.h  DetectingNature.i  FeatureExtractor.cpp  FeatureExtractor.h  Histogram.cpp  Histogram.h  HistogramManager.cpp  HistogramManager.h  Image.cpp  Image.h  ImageFeatures.cpp  ImageFeatures.h  OutputHelper.cpp  OutputHelper.h  RubyDemo.rb  Settings.cpp  Settings.h  TrainingSettings.cpp  TrainingSettings.h  main.cpp
src/classification/: Classifier.cpp  Classifier.h  ConfusionMatrix.cpp  ConfusionMatrix.h  LinearClassifier.cpp  LinearClassifier.h  SVMClassifier.cpp  SVMClassifier.h
src/cmake/: FindCImg.cmake
src/codebook/: Codebook.h  CodebookGenerator.cpp  CodebookGenerator.h  FisherCodebook.cpp  FisherCodebook.h  FisherCodebookGenerator.cpp  FisherCodebookGenerator.h  KMeansCodebook.cpp  KMeansCodebook.h  KMeansCodebookGenerator.cpp  KMeansCodebookGenerator.h
src/features/: FeatureExtractor.cpp  FeatureExtractor.h  FeatureTransform.h  HOGFeatureExtractor.cpp  HOGFeatureExtractor.h  HellingerFeatureTransform.cpp  HellingerFeatureTransform.h  Image.cpp  Image.h  ImageFeatures.cpp  ImageFeatures.h  LBPFeatureExtractor.cpp  LBPFeatureExtractor.h  SIFTFeatureExtractor.cpp  SIFTFeatureExtractor.h
src/framework/: ClassificationFramework.cpp  ClassificationFramework.h  Settings.cpp  Settings.h  SettingsManager.h
src/images/: GreyscaleImageLoader.cpp  GreyscaleImageLoader.h  HSVImageLoader.cpp  HSVImageLoader.h  ImageData.cpp  ImageData.h  ImageLoader.cpp  ImageLoader.h  OpponentImageLoader.cpp  OpponentImageLoader.h
src/utils/: CacheHelper.cpp  CacheHelper.h  OutputHelper.cpp  OutputHelper.h
